app/assets/stylesheets/application.scss
// Avoid "the notch" on iPhones and Pixel phones
@supports (width: env(safe-area-inset-left)) {
  @media only screen and (orientation: landscape) {
    body {
      padding-left: env(safe-area-inset-left);
      padding-right: env(safe-area-inset-right);
    }
  }
}

// Rend les formulaires button_to "transparents" pour les styles
// Permet d'utiliser des liens et des boutons dans un btn-group
form.button_to {
  display: contents;
}

// Empêche l'affichage des boutons [hidden], que la classe .fr-btn affiche par défaut
.fr-btn[hidden] {
  display: none !important;
}

// Ajuste les badges pour permettre de n'afficher que l'icône
.fr-badge {
  // Ajoute un outline quand il contient un lien caché qui a le focus
  &:has(a:focus) {
    outline-color: #0a76f6;
    outline-style: solid;
    outline-width: 2px;
    a {
      outline: none;
    }
  }
  &[role=tooltip] {
    outline-offset: 0;
    &::before {
      margin-right: -.125rem; // Centre l'icône quand le badge n'a pas de texte visible
    }
    &:not(a) {
      cursor: help;
    }
    &[target=_blank]::after {
      display: none; // Masque l'icône nouvelle fenêtre en mode tooltip
    }
  }
}

.link--icon-only {
  background-image: none; // Underline uses a background-image
  &.fr-link--icon-left::before,
  &.fr-link--icon-right::after {
    margin-right: 0;
    margin-left: 0;
  }
}

// Improve file upload group affordance
.fr-upload-group {
  .fr-upload {
    transition: all var(--transition-duration-default, 0.2s) ease;
  }
  &.dragover .fr-upload,
  .fr-upload:focus {
    outline: var(--border-width-default, 2px) solid #0a76f6;
    outline-offset: 2px;
    background-color: var(--background-action-low-blue-france);
  }
}

// Improve pagination spacing on mobile
.fr-pagination {
  width: 100%;
}
.fr-pagination__list {
  align-content: space-between;
  & > li {
    flex-grow: 1;
    display: flex;
    justify-content: center;
  }
}

// Replace FranceConnect with ProConnect
// https://partenaires.proconnect.gouv.fr/docs/fournisseur-service/bouton_proconnect
.fr-connect {
  padding-left: 4.375em !important;
}
/* ... */

